added new component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<!-- <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
   </h1>
@@ -8,8 +8,8 @@
 <h2>Here are some links to help you start: </h2>
 
 <app-arraylist-iterate></app-arraylist-iterate>
-<br/>
+<br/>-->
+<app-test [abc]="obj.myString"></app-test>
+<!-- <app-json-iterate></app-json-iterate>
 
-<app-json-iterate></app-json-iterate>
-
-<app-map-test></app-map-test>
+<app-map-test></app-map-test> -->
