--- a/src/app/arraylist-iterate/arraylist-iterate.component.html
+++ b/src/app/arraylist-iterate/arraylist-iterate.component.html
@@ -1,5 +1,10 @@
-<ul>
+<!-- <ul>
   <li *ngFor="let user of someArray">
     {{user}}
+  </li>
+</ul> -->
+<ul>
+  <li *ngFor="let user of [0,1,2,3];index as i">
+    {{user}}-------------{{i}}
   </li>
 </ul>
